include $(top_srcdir)/common.mk

METASOURCES = AUTO
noinst_LTLIBRARIES = libinterface.la

SUBDIRS =
DRIVERFILES =
libinterface_la_LIBADD =

CLEANFILES =

BUILT_SOURCES =

BUILT_SOURCES +=
CLEANFILES +=

libinterface_la_SOURCES = \
	signal.c \
	bitbang.c \
	feature.c

noinst_HEADERS = \
	interface.h \
	signal.h \
	bitbang.h \
	feature.h

EXTRA_DIST =

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
